--- a/NotesApp/Base.lproj/Main.storyboard
+++ b/NotesApp/Base.lproj/Main.storyboard
@@ -34,16 +34,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ws7-R9-FZb" customClass="InkView" customModule="NotesApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kbx-PQ-zPL">
+                                <rect key="frame" x="0.0" y="20" width="375" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="oF8-Sd-R8h"/>
+                                </constraints>
+                                <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="NotesApp" id="lSO-Jh-6zZ">
+                                        <barButtonItem key="leftBarButtonItem" title="Done" id="7oj-Aj-u7K">
+                                            <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <connections>
+                                                <action selector="dismissDocumentViewController" destination="M2k-L8-Olo" id="Tn4-tQ-BWb"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.14509806036949158" green="0.14509806036949158" blue="0.14509806036949158" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="ws7-R9-FZb" firstAttribute="top" secondItem="SIE-Uh-Zny" secondAttribute="top" id="X1V-Eb-3nu"/>
+                            <constraint firstItem="Kbx-PQ-zPL" firstAttribute="trailing" secondItem="BoZ-jc-2Y8" secondAttribute="trailing" id="EqI-He-yeQ"/>
+                            <constraint firstItem="Kbx-PQ-zPL" firstAttribute="top" secondItem="BoZ-jc-2Y8" secondAttribute="top" id="Ncy-00-3y6"/>
+                            <constraint firstItem="Kbx-PQ-zPL" firstAttribute="leading" secondItem="BoZ-jc-2Y8" secondAttribute="leading" id="VbY-vm-6Ud"/>
                             <constraint firstItem="ws7-R9-FZb" firstAttribute="bottom" secondItem="BoZ-jc-2Y8" secondAttribute="bottom" id="YQY-eC-Rc1"/>
                             <constraint firstItem="ws7-R9-FZb" firstAttribute="leading" secondItem="BoZ-jc-2Y8" secondAttribute="leading" id="gcH-5r-inK"/>
                             <constraint firstItem="ws7-R9-FZb" firstAttribute="trailing" secondItem="BoZ-jc-2Y8" secondAttribute="trailing" id="mfn-i8-epY"/>
+                            <constraint firstItem="ws7-R9-FZb" firstAttribute="top" secondItem="BoZ-jc-2Y8" secondAttribute="top" id="xXl-P6-b0c"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BoZ-jc-2Y8"/>
                     </view>
