Implement width picking

--- a/NotesApp/Base.lproj/Main.storyboard
+++ b/NotesApp/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                                                     <action selector="dismissDocumentViewController" destination="M2k-L8-Olo" id="Tn4-tQ-BWb"/>
                                                 </connections>
                                             </barButtonItem>
-                                            <barButtonItem systemItem="compose" id="gxr-b1-ax9">
+                                            <barButtonItem title="Pencil" id="gxr-b1-ax9">
                                                 <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <connections>
                                                     <segue destination="cZi-xR-ee8" kind="popoverPresentation" popoverAnchorBarButtonItem="gxr-b1-ax9" id="Saa-01-FMq">
@@ -105,10 +105,10 @@
             </objects>
             <point key="canvasLocation" x="1029.5999999999999" y="653.52323838080963"/>
         </scene>
-        <!--Color Picker-->
+        <!--Pencil Picker-->
         <scene sceneID="Jb1-Bp-Qks">
             <objects>
-                <viewController autoresizesArchivedViewToFullSize="NO" title="Color Picker" modalPresentationStyle="currentContext" id="cZi-xR-ee8" customClass="ColorPickerViewController" customModule="NotesApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController autoresizesArchivedViewToFullSize="NO" title="Pencil Picker" modalPresentationStyle="currentContext" id="cZi-xR-ee8" customClass="PencilPickerViewController" customModule="NotesApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aLp-a9-uCP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="225"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -166,6 +166,18 @@
                                     <constraint firstAttribute="height" constant="50" id="mA0-m9-DC2"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Width" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XTS-7w-Z7M">
+                                <rect key="frame" x="65" y="157" width="46" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="0.5" maxValue="15" translatesAutoresizingMaskIntoConstraints="NO" id="rn4-bt-O3w">
+                                <rect key="frame" x="119" y="152" width="253" height="30"/>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="cZi-xR-ee8" eventType="valueChanged" id="pR7-ka-9HT"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -175,6 +187,7 @@
                             <constraint firstItem="5dg-zN-0pS" firstAttribute="leading" secondItem="1pL-42-5GM" secondAttribute="leading" constant="5" id="9fi-E7-gW1"/>
                             <constraint firstItem="5dg-zN-0pS" firstAttribute="top" secondItem="hNV-h4-afR" secondAttribute="bottom" constant="20" id="EO9-Zv-QhE"/>
                             <constraint firstItem="C23-M8-rC0" firstAttribute="top" secondItem="rGj-83-Fv3" secondAttribute="bottom" constant="10" id="Jvn-3Z-Kcn"/>
+                            <constraint firstItem="rn4-bt-O3w" firstAttribute="centerY" secondItem="5dg-zN-0pS" secondAttribute="centerY" id="M5K-T6-EZb"/>
                             <constraint firstAttribute="trailing" secondItem="rGj-83-Fv3" secondAttribute="trailing" constant="5" id="NBy-uN-1LD"/>
                             <constraint firstAttribute="trailing" secondItem="C23-M8-rC0" secondAttribute="trailing" constant="5" id="Qrx-DI-7Ow"/>
                             <constraint firstItem="89G-5B-XaW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1pL-42-5GM" secondAttribute="leading" id="UN3-Dk-p9w"/>
@@ -183,6 +196,11 @@
                             <constraint firstAttribute="trailing" secondItem="wkP-l7-gEK" secondAttribute="trailing" constant="5" id="ed3-iF-VKF"/>
                             <constraint firstAttribute="trailing" secondItem="MsX-3Z-m5R" secondAttribute="trailing" constant="340" id="fAA-gC-udC"/>
                             <constraint firstAttribute="trailing" secondItem="hNV-h4-afR" secondAttribute="trailing" constant="336" id="j3M-9w-2Be"/>
+                            <constraint firstItem="XTS-7w-Z7M" firstAttribute="centerY" secondItem="5dg-zN-0pS" secondAttribute="centerY" id="jPp-fl-aIB"/>
+                            <constraint firstItem="rn4-bt-O3w" firstAttribute="leading" secondItem="XTS-7w-Z7M" secondAttribute="trailing" constant="10" id="kBL-UQ-xB2"/>
+                            <constraint firstItem="1pL-42-5GM" firstAttribute="bottom" secondItem="rn4-bt-O3w" secondAttribute="bottom" constant="44" id="nbc-1k-lFd"/>
+                            <constraint firstItem="XTS-7w-Z7M" firstAttribute="leading" secondItem="5dg-zN-0pS" secondAttribute="trailing" constant="10" id="neZ-hh-Ydq"/>
+                            <constraint firstItem="1pL-42-5GM" firstAttribute="trailing" secondItem="rn4-bt-O3w" secondAttribute="trailing" constant="5" id="ntD-Z8-FC5"/>
                             <constraint firstItem="MsX-3Z-m5R" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1pL-42-5GM" secondAttribute="leading" id="pgV-r8-Bvh"/>
                             <constraint firstItem="wkP-l7-gEK" firstAttribute="top" secondItem="C23-M8-rC0" secondAttribute="bottom" constant="10" id="pot-7i-M9p"/>
                             <constraint firstItem="5dg-zN-0pS" firstAttribute="top" secondItem="aLp-a9-uCP" secondAttribute="top" constant="142" id="rnF-34-bKw"/>
@@ -195,11 +213,12 @@
                         <outlet property="colorDisplay" destination="5dg-zN-0pS" id="BKs-HD-f4u"/>
                         <outlet property="greenSlider" destination="C23-M8-rC0" id="1P3-vL-mAK"/>
                         <outlet property="redSlider" destination="rGj-83-Fv3" id="gjy-lM-bNC"/>
+                        <outlet property="widthSlider" destination="rn4-bt-O3w" id="xbP-OH-Qjs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U9u-lm-mja" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1393" y="-177"/>
+            <point key="canvasLocation" x="1392.6258992805756" y="-177.69784172661872"/>
         </scene>
     </scenes>
 </document>
