--- a/NotesApp/Base.lproj/Main.storyboard
+++ b/NotesApp/Base.lproj/Main.storyboard
@@ -35,14 +35,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ws7-R9-FZb" customClass="InkView" customModule="NotesApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="1112" height="814"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kbx-PQ-zPL">
-                                <rect key="frame" x="0.0" y="20" width="1112" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="oF8-Sd-R8h"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="20" width="1112" height="44"/>
                                 <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -81,9 +78,12 @@
                                         </rightBarButtonItems>
                                     </navigationItem>
                                 </items>
+                                <connections>
+                                    <outlet property="delegate" destination="M2k-L8-Olo" id="WuL-cx-K0C"/>
+                                </connections>
                             </navigationBar>
                         </subviews>
-                        <color key="backgroundColor" red="0.14509806036949158" green="0.14509806036949158" blue="0.14509806036949158" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.094117633998394012" green="0.0941176638007164" blue="0.094117633998394012" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Kbx-PQ-zPL" firstAttribute="trailing" secondItem="BoZ-jc-2Y8" secondAttribute="trailing" id="EqI-He-yeQ"/>
                             <constraint firstItem="Kbx-PQ-zPL" firstAttribute="top" secondItem="BoZ-jc-2Y8" secondAttribute="top" id="Ncy-00-3y6"/>
@@ -91,7 +91,7 @@
                             <constraint firstItem="ws7-R9-FZb" firstAttribute="bottom" secondItem="BoZ-jc-2Y8" secondAttribute="bottom" id="YQY-eC-Rc1"/>
                             <constraint firstItem="ws7-R9-FZb" firstAttribute="leading" secondItem="BoZ-jc-2Y8" secondAttribute="leading" id="gcH-5r-inK"/>
                             <constraint firstItem="ws7-R9-FZb" firstAttribute="trailing" secondItem="BoZ-jc-2Y8" secondAttribute="trailing" id="mfn-i8-epY"/>
-                            <constraint firstItem="ws7-R9-FZb" firstAttribute="top" secondItem="BoZ-jc-2Y8" secondAttribute="top" id="xXl-P6-b0c"/>
+                            <constraint firstItem="ws7-R9-FZb" firstAttribute="top" secondItem="SIE-Uh-Zny" secondAttribute="top" id="xXl-P6-b0c"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BoZ-jc-2Y8"/>
                     </view>
