--- a/NotesApp/Base.lproj/Main.storyboard
+++ b/NotesApp/Base.lproj/Main.storyboard
@@ -34,10 +34,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ws7-R9-FZb" customClass="InkView" customModule="NotesApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="Vr0-xo-uxB" customClass="InkScrollView" customModule="NotesApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="1112" height="770"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ws7-R9-FZb" customClass="InkView" customModule="NotesApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="834" id="240-uC-miq"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                                <constraints>
+                                    <constraint firstItem="ws7-R9-FZb" firstAttribute="centerX" secondItem="Vr0-xo-uxB" secondAttribute="centerX" id="7Ek-wh-GnD"/>
+                                    <constraint firstItem="ws7-R9-FZb" firstAttribute="top" secondItem="Vr0-xo-uxB" secondAttribute="top" id="HiN-XQ-jea"/>
+                                    <constraint firstAttribute="trailing" secondItem="ws7-R9-FZb" secondAttribute="trailing" id="Lt2-Ab-bI4"/>
+                                    <constraint firstItem="ws7-R9-FZb" firstAttribute="leading" secondItem="Vr0-xo-uxB" secondAttribute="leading" id="PE2-99-nQ7"/>
+                                    <constraint firstAttribute="bottom" secondItem="ws7-R9-FZb" secondAttribute="bottom" constant="-64" id="iC4-a2-8BW"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="M2k-L8-Olo" id="3Wz-HW-2JJ"/>
+                                </connections>
+                            </scrollView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kbx-PQ-zPL">
                                 <rect key="frame" x="0.0" y="20" width="1112" height="44"/>
                                 <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -85,17 +104,18 @@
                         </subviews>
                         <color key="backgroundColor" red="0.094117633998394012" green="0.0941176638007164" blue="0.094117633998394012" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="Vr0-xo-uxB" firstAttribute="trailing" secondItem="BoZ-jc-2Y8" secondAttribute="trailing" id="9S7-eg-KYr"/>
                             <constraint firstItem="Kbx-PQ-zPL" firstAttribute="trailing" secondItem="BoZ-jc-2Y8" secondAttribute="trailing" id="EqI-He-yeQ"/>
                             <constraint firstItem="Kbx-PQ-zPL" firstAttribute="top" secondItem="BoZ-jc-2Y8" secondAttribute="top" id="Ncy-00-3y6"/>
                             <constraint firstItem="Kbx-PQ-zPL" firstAttribute="leading" secondItem="BoZ-jc-2Y8" secondAttribute="leading" id="VbY-vm-6Ud"/>
-                            <constraint firstItem="ws7-R9-FZb" firstAttribute="bottom" secondItem="BoZ-jc-2Y8" secondAttribute="bottom" id="YQY-eC-Rc1"/>
-                            <constraint firstItem="ws7-R9-FZb" firstAttribute="leading" secondItem="BoZ-jc-2Y8" secondAttribute="leading" id="gcH-5r-inK"/>
-                            <constraint firstItem="ws7-R9-FZb" firstAttribute="trailing" secondItem="BoZ-jc-2Y8" secondAttribute="trailing" id="mfn-i8-epY"/>
-                            <constraint firstItem="ws7-R9-FZb" firstAttribute="top" secondItem="SIE-Uh-Zny" secondAttribute="top" id="xXl-P6-b0c"/>
+                            <constraint firstItem="Vr0-xo-uxB" firstAttribute="top" secondItem="SIE-Uh-Zny" secondAttribute="top" constant="64" id="cV8-bH-rHC"/>
+                            <constraint firstItem="Vr0-xo-uxB" firstAttribute="bottom" secondItem="BoZ-jc-2Y8" secondAttribute="bottom" id="cvJ-kT-Kb6"/>
+                            <constraint firstItem="Vr0-xo-uxB" firstAttribute="leading" secondItem="BoZ-jc-2Y8" secondAttribute="leading" id="eml-Kk-unC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BoZ-jc-2Y8"/>
                     </view>
                     <connections>
+                        <outlet property="inkScrollView" destination="Vr0-xo-uxB" id="sI9-OK-Wlw"/>
                         <outlet property="inkView" destination="ws7-R9-FZb" id="G5b-nL-zom"/>
                         <outlet property="redoBarButton" destination="wZg-KX-kNd" id="vOU-pe-Ohi"/>
                         <outlet property="undoBarButton" destination="LqA-pP-3Cy" id="YEv-2f-Adj"/>
@@ -103,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rl9-ES-qQn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="660" y="654"/>
+            <point key="canvasLocation" x="659.89208633093529" y="653.95683453237416"/>
         </scene>
         <!--Pencil Picker-->
         <scene sceneID="Jb1-Bp-Qks">
