--- a/NotesApp/Base.lproj/Main.storyboard
+++ b/NotesApp/Base.lproj/Main.storyboard
@@ -75,6 +75,14 @@
                                                     <action selector="undo:" destination="M2k-L8-Olo" id="HEA-67-usP"/>
                                                 </connections>
                                             </barButtonItem>
+                                            <barButtonItem title="Shape" id="aJq-f1-AvR">
+                                                <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <connections>
+                                                    <segue destination="9Jd-q2-udy" kind="popoverPresentation" popoverAnchorBarButtonItem="aJq-f1-AvR" id="6B4-JB-Ehw">
+                                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                                    </segue>
+                                                </connections>
+                                            </barButtonItem>
                                         </rightBarButtonItems>
                                     </navigationItem>
                                 </items>
@@ -225,6 +233,65 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U9u-lm-mja" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="752" y="-55"/>
+        </scene>
+        <!--Shapes Picker View Controller-->
+        <scene sceneID="Tgb-bS-Xdk">
+            <objects>
+                <viewController id="9Jd-q2-udy" customClass="ShapesPickerViewController" customModule="NotesApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zhy-1k-6tZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Snapping Angle 90º" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spR-LH-iD0">
+                                <rect key="frame" x="16" y="24" width="241" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jgO-Ms-yHK">
+                                <rect key="frame" x="310" y="57" width="51" height="31"/>
+                                <connections>
+                                    <action selector="switchChanged:" destination="9Jd-q2-udy" eventType="valueChanged" id="Sbq-4Q-S2C"/>
+                                </connections>
+                            </switch>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="22.5" minimumValue="22.5" maximumValue="90" stepValue="22.5" translatesAutoresizingMaskIntoConstraints="NO" id="Xxz-xv-qYJ">
+                                <rect key="frame" x="265" y="20" width="94" height="29"/>
+                                <connections>
+                                    <action selector="stepperChanged:" destination="9Jd-q2-udy" eventType="valueChanged" id="ZEu-XN-c3z"/>
+                                </connections>
+                            </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Should Snap" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lv0-B4-v9U">
+                                <rect key="frame" x="16" y="62" width="241" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Xxz-xv-qYJ" firstAttribute="leading" secondItem="spR-LH-iD0" secondAttribute="trailing" constant="8" id="6nT-RU-IWJ"/>
+                            <constraint firstItem="0KN-M9-Kdh" firstAttribute="trailing" secondItem="jgO-Ms-yHK" secondAttribute="trailing" constant="16" id="7CO-KF-iHp"/>
+                            <constraint firstItem="spR-LH-iD0" firstAttribute="leading" secondItem="0KN-M9-Kdh" secondAttribute="leading" constant="16" id="JJd-Rv-MZy"/>
+                            <constraint firstItem="jgO-Ms-yHK" firstAttribute="leading" secondItem="Lv0-B4-v9U" secondAttribute="trailing" constant="53" id="UL7-nC-W72"/>
+                            <constraint firstItem="jgO-Ms-yHK" firstAttribute="top" secondItem="Xxz-xv-qYJ" secondAttribute="bottom" constant="8" id="YFA-ax-hci"/>
+                            <constraint firstItem="Lv0-B4-v9U" firstAttribute="leading" secondItem="0KN-M9-Kdh" secondAttribute="leading" constant="16" id="m8r-Pc-6ua"/>
+                            <constraint firstItem="0KN-M9-Kdh" firstAttribute="trailing" secondItem="Xxz-xv-qYJ" secondAttribute="trailing" constant="16" id="mGf-Dl-gaF"/>
+                            <constraint firstItem="Lv0-B4-v9U" firstAttribute="top" secondItem="spR-LH-iD0" secondAttribute="bottom" constant="17" id="nOs-Hb-yVu"/>
+                            <constraint firstItem="spR-LH-iD0" firstAttribute="top" secondItem="0KN-M9-Kdh" secondAttribute="top" constant="24" id="nzj-ET-EXO"/>
+                            <constraint firstItem="Xxz-xv-qYJ" firstAttribute="top" secondItem="0KN-M9-Kdh" secondAttribute="top" constant="20" id="q39-tU-sRb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0KN-M9-Kdh"/>
+                    </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="375" height="200"/>
+                    <connections>
+                        <outlet property="snappingAngleLabel" destination="spR-LH-iD0" id="sU4-3f-rf6"/>
+                        <outlet property="snappingStepper" destination="Xxz-xv-qYJ" id="8SN-tZ-rd5"/>
+                        <outlet property="snappingSwitch" destination="jgO-Ms-yHK" id="u6Z-3m-4qi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fMH-YD-tvj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1396.9424460431655" y="-55.395683453237417"/>
         </scene>
     </scenes>
     <resources>
